--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,8 @@
 <%- include("partials/header") %>
     <header class="bg-info text-white">
-      <div class="container text-center">
+      <div class="container text-center" style="height: 430px">
         <h1><img src="/images/logo.png" alt="Minhas Séries" /></h1>
         <p class="lead">Gerencie suas séries com Express + Mongo + NodeJS</p>
       </div>
     </header>
-
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Sobre</h2>
-            <p class="lead">Uma headline aqui</p>
-            <ul>
-              <li>Uma lista aqui</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
 <%- include("partials/footer") %>
