renderizando as series

--- a/views/series/index.ejs
+++ b/views/series/index.ejs
@@ -6,7 +6,10 @@
             <h2>Sobre</h2>
             <p class="lead">Uma headline aqui</p>
             <ul>
-              <li>Uma lista aqui</li>
+              <% series.forEach( serie => { %>
+                <li><%- serie.name %> <%- serie.status %>  </li>
+              <% }) %>
+              
             </ul>
           </div>
         </div>
