fix erro digitacao

--- a/views/series/nova.ejs
+++ b/views/series/nova.ejs
@@ -14,7 +14,7 @@
               <label for="status">Situação</label>
               <select class="form-control" id="status" name=status>
                 <option value="to-watch">Para assistir</option>
-                <option value="to-watching">Assistindo</option>
+                <option value="watching">Assistindo</option>
                 <option value="watched">Assistido</option>
               </select>
             </div>
