--- a/views/series/editar.ejs
+++ b/views/series/editar.ejs
@@ -11,6 +11,9 @@
               value="<%= serie.name %>"
               id="name" name="name" type="text" class="form-control" placeholder="Escreva nome da serie">
               <small class="form-text text-muted">Nome da serie a ser salva</small>
+              <% if(errors && errors.indexOf('name')>=0){ %>
+                <small class="form-text text-muted">Por favor, informe o nome da série.</small>
+              <% } %>
             </div>
             <div class="form-group">
               <label for="status">Situação</label>
