--- a/views/series/nova.ejs
+++ b/views/series/nova.ejs
@@ -4,11 +4,14 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <form method="post">
-            <h2>Cadastro de Series</h2>
+            <h2>Nova Série</h2>
             <div class="form-group">
               <label for="name">Nome da série</label>
               <input id="name" name="name" type="text" class="form-control" placeholder="Escreva nome da serie">
               <small class="form-text text-muted">Nome da serie a ser salva</small>
+              <% if(errors && errors.indexOf('name')>=0){ %>
+                <small class="form-text text-muted">Por favor, informe o nome da série.</small>
+              <% } %>
             </div>
             <div class="form-group">
               <label for="status">Situação</label>
