criando area para comentarios, incluindo botao submit

--- a/views/series/info.ejs
+++ b/views/series/info.ejs
@@ -8,6 +8,8 @@
             <div class="form-group">
               Nome da série: <%= serie.name %>
             </div>
+            <textarea name="comentario" class="form-control" id="" cols="30" rows="10"></textarea>
+            <input class= "btn btn-info mt-4" type="submit" value="Adicionar comentario">
           </form>
         </div>
       </div>
