refatorando, trocando parametros do forEach  series por results.data

--- a/views/series/index.ejs
+++ b/views/series/index.ejs
@@ -6,7 +6,7 @@
             <h2>Series</h2>
             <p class="lead">Todas as séries cadastradas <a href="/series/nova" class="btn btn-info">Cadastrar nova série</a></p>
             <table class="table table-hover">
-              <% series.forEach( serie => { %>
+              <% results.data.forEach( serie => { %>
                 <tr>
                   <td>
                     <a href="/series/info/<%=serie._id %>"> <%= serie.name %></a>
